--- a/annotador-web/src/main/webapp/index.html
+++ b/annotador-web/src/main/webapp/index.html
@@ -176,7 +176,7 @@
 									
 							</div>
 								<div class="col-lg-9 col-md-6" >
-									<div class="mt-10" style="line-height: 20px;">
+									<div class="mt-10">
 											<textarea class="single-textarea" name="inputText" id="inputText" placeholder="Hoy es 3 de octubre" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Hoy es 3 de octubre'" required></textarea>
 									</div>
 								</div>
