--- a/annotador-web/src/main/webapp/index.html
+++ b/annotador-web/src/main/webapp/index.html
@@ -86,37 +86,37 @@
 								<img src="img/date.png" style="margin-top:25px;max-width:70px;vertical-align:middle" alt="">
 							</div>
 							<h4 class="caption">DATE</h4>
-							<p class="p" style="max-width:120px; word-wrap:break-word;">Calendar expressions such as 'October 7, 1991', '22/01/2018', or '1992'; also relative expressions like 'Two days ago'.</p>
+							<p class="p" style="max-width:190px; word-wrap:break-word;">Calendar expressions such as 'October 7, 1991', '22/01/2018', or '1992'; also relative expressions like 'Two days ago'.</p>
 						</div>
-						<div class="work-arrow">
-							<img src="img/elements/work-arrow.png" alt="">
+						<div class="work-arrow" style="width:30px" >
+							<img src="img/elements/work-arrow.png" style="width:30px" alt="">
 						</div>
 						<div class="single-work-process">
 							<div class="work-icon-box">
 								<img src="img/time.png" style="margin-top:25px;max-width:70px;vertical-align:middle" alt="">
 							</div>
 							<h4 class="caption">TIME</h4>
-							<p class="p" style="max-width:120px; word-wrap:break-word;">Points in time ('At seven o'clock', '22:30', '3.30pm'...), absolute or relative ('Half an hour ago', 'In two minutes and three seconds')</p>
+							<p class="p" style="max-width:195px; word-wrap:break-word;">Points in time ('At seven o'clock', '22:30', '3.30pm'...), absolute or relative ('Half an hour ago', 'In two minutes and three seconds')</p>
 						</div>
-						<div class="work-arrow">
-							<img src="img/elements/work-arrow.png" alt="">
+						<div class="work-arrow" style="width:30px" >
+							<img src="img/elements/work-arrow.png" style="width:30px" alt="">
 						</div>
 						<div class="single-work-process">
 							<div class="work-icon-box">
 								<img src="img/set.png" style="margin-top:25px;max-width:70px;vertical-align:middle" alt="">
 							</div>
 							<h4 class="caption">SET</h4>
-							<p class="p" style="max-width:120px; word-wrap:break-word;">Repetitions in time (such as 'Monthly', 'Twice a week', 'Every Monday', 'Three times a year', 'Every first of the month'...)</p>
+							<p class="p" style="max-width:190px; word-wrap:break-word;">Repetitions in time (such as 'Monthly', 'Twice a week', 'Every Monday', 'Three times a year', 'Every first of the month'...)</p>
 						</div>
-						<div class="work-arrow">
-							<img src="img/elements/work-arrow.png" alt="">
+						<div class="work-arrow" style="width:30px" >
+							<img src="img/elements/work-arrow.png" style="width:30px" alt="">
 						</div>
 						<div class="single-work-process">
 							<div class="work-icon-box">
 								<img src="img/dur.png" style="margin-top:25px;max-width:70px;vertical-align:middle" alt="">
 							</div>
 							<h4 class="caption">DURATION</h4>
-							<p class="p" style="max-width:120px; word-wrap:break-word;">Amounts of time like 'Two days', 'Three years and six months', 'Two centuries', 'One hour and 20 minutes' or 'Half an hour'.
+							<p class="p" style="max-width:190px; word-wrap:break-word;">Amounts of time like 'Two days', 'Three years and six months', 'Two centuries', 'One hour and 20 minutes' or 'Half an hour'.
 </p>
 						</div>
 					</div>
@@ -480,9 +480,18 @@
 						</div>
 					</div>
 				</div-->
-				<footer><div class="item5" text-align="center" style="color: #fff;>
-      <small><center><a href="https://github.com/mnavasloro/Annotador"><img src="img/aboutme3.png" width="80"  align="left"/></a><center><a href="http://www.oeg-upm.net/"><img src="img/oeg.png" width="80"  align="right"/></a><p style="display: inline; vertical-align: middle"><br>This work is part of the PhD thesis by María Navas-Loro at the Ontology Engineering Group (Universidad Politécnica de Madrid). Please visit her <a href="http://marianavas.oeg-upm.net" ><b>website</b></a> or the <a href="https://github.com/mnavasloro/Annotador"><b>GitHub</b></a> repository for more information.</p></small><br/>
-</center>
+				<footer><div class="item5" text-align="center" style="color: #fff">
+      
+	  <a href="https://github.com/mnavasloro/Annotador"><img src="img/aboutme3.png" width="80"  align="left"/></a>
+	  <center>
+	  <a href="http://www.oeg-upm.net/"><img src="img/oeg.png" width="80"  align="right"/></a>
+	  <p style="display: inline; vertical-align: middle">
+	  <br>This work is part of the PhD thesis by María Navas-Loro at the Ontology Engineering Group (Universidad Politécnica de Madrid). Please visit her <a href="http://marianavas.oeg-upm.net" ><b>website</b></a> or the <a href="https://github.com/mnavasloro/Annotador"><b>GitHub</b></a> repository for more information.
+	  <br/>
+	  </p>
+	  </center>
+	 
+
 </div>
 				</footer>				
 				<footer>
@@ -491,7 +500,7 @@
 							<div class="logo">
 								<a href="index.html"><img src="img/añotador-banner-tecla-azul-noshadow.png" width="115px" height="24px" alt=""></a>
 							</div>
-							<div class="copy-right-text">Copyright &copy; 2017  |  All rights reserved to <a href="#">Dinomuz inc.</a> Designed by <a href="https://colorlib.com" target="_blank">Colorlib</a></div>
+							<div class="copy-right-text">Copyright &copy; 2019  |  All rights reserved to <a href="#">Dinomuz inc.</a> Designed by <a href="https://colorlib.com" target="_blank">Colorlib</a></div>
 							<!--div class="footer-social">
 								<a href="#"><i class="fa fa-facebook"></i></a>
 								<a href="#"><i class="fa fa-twitter"></i></a>
