JSON output added

--- a/annotador-web/src/main/webapp/index.html
+++ b/annotador-web/src/main/webapp/index.html
@@ -131,7 +131,7 @@
 						<div class="col-lg-6">
 							<div class="section-title text-center">
 								<h1 class="text-white">Demo</h1>
-								<p class="text-white">Try Añotador live!</p>
+								<p class="text-white" style="font-size: 20px;">Try Añotador live!</p>
 							</div>
 							
 						</div>
