--- a/annotador-web/src/main/webapp/index.html
+++ b/annotador-web/src/main/webapp/index.html
@@ -510,7 +510,7 @@
 							<div class="logo">
 								<a href="index.html"><img src="img/añotador-banner-tecla-azul-noshadow.png" width="115px" height="24px" alt=""></a>
 							</div>
-							<div class="copy-right-text">Copyright &copy; 2019  |  All rights reserved to <a href="#">Dinomuz inc.</a> Designed by <a href="https://colorlib.com" target="_blank">Colorlib</a></div>
+							<div class="copy-right-text">Copyright &copy; 2019  |  All rights of the design of the web are reserved to <a href="#">Dinomuz inc.</a> Website template designed by <a href="https://colorlib.com" target="_blank">Colorlib</a></div>
 							<!--div class="footer-social">
 								<a href="#"><i class="fa fa-facebook"></i></a>
 								<a href="#"><i class="fa fa-twitter"></i></a>
