--- a/annotador-web/src/main/webapp/index.html
+++ b/annotador-web/src/main/webapp/index.html
@@ -187,7 +187,7 @@
 							</div>
 								<div class="col-lg-9 col-md-5 col-sm-6">
 									<div class="mt-10">
-											<textarea class="single-textarea" name="inputText" id="inputText" placeholder="Hoy es 3 de octubre" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Hoy es 3 de octubre'" required></textarea>
+											<textarea class="single-textarea" name="inputText" id="inputText" placeholder="Here goes the input text" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Here goes the input text'" required>Hoy es 3 de octubre</textarea>
 									</div>
 								</div>
 						</div>
