rest service updated

--- a/annotador-web/src/main/webapp/howtouse.html
+++ b/annotador-web/src/main/webapp/howtouse.html
@@ -41,6 +41,7 @@
 									<a href="index.html#ref-demo" style="text-decoration: none;outline: 0;color: white;">Demo</a>
 									<a href="howtouse.html" style="text-decoration: none;outline: 0;color: white;">How to use Añotador</a>
 									<a href="hourglass.html" style="text-decoration: none;outline: 0;color: white;">Hourglass corpus</a>
+									<a href="results.html" style="text-decoration: none;outline: 0;color: white;">Results</a>
 								</nav>
 								<div class="menu-bar"><span class="lnr lnr-menu"></span></div>
 							</div>
@@ -157,7 +158,6 @@ Probably the most important part for you is the field “value”, that appears 
 					<div class="row justify-content-center">
 						<div class="col-lg-6">
 							<div class="section-title text-center">
-							<br>
 							<br>
 								<h1 class="text-white">Where to find it</h1>
 							<br>
