--- a/annotador-web/src/main/webapp/index.html
+++ b/annotador-web/src/main/webapp/index.html
@@ -33,63 +33,23 @@
 
 	</head>
 	<body>
-		<div class="main-wrapper-first">
-		<!--header-->
-				
-			<!--/header-->
-			</div>
-		<!--old>
-			<div class="hero-area relative">
-				<header>
-					<div class="container">
-						<div class="header-wrap">
-							<div class="header-top d-flex justify-content-between align-items-center">
-								<!--div class="logo">
-									<a href="index.html"><img src="img/añotador-banner-tecla-azul-notrans.png" width="400px" height="90px" alt=""></a>
-								</div>
-								<div class="main-menubar d-flex align-items-center">
-									<nav class="hide">
-										<a href="index.html">Home</a>
-										<a href="generic.html">Generic</a>
-										<a href="elements.html">Elements</a>
-									</nav>
-									<div class="menu-bar"><span class="lnr lnr-menu"></span></div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</header>
-				<!--div class="banner-area">
-					<div class="container">
-						<div class="row height align-items-center">
-							<div class="col-lg-7">
-								<div class="banner-content">
-									<h1 class="text-white text-uppercase mb-10">Don’t look anywhere, <br> This is the best place on web</h1>
-									<p class="text-white mb-30">Living in today’s metropolitan world of cellular phones, mobile computers and other high-tech gadgets is not just hectic but very</p>
-									<a href="#" class="primary-btn d-inline-flex align-items-center"><span class="mr-10">Get Started</span><span class="lnr lnr-arrow-right"></span></a>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-		</div>
-			<!--old-->
-		<div class="main-wrapper">
-					<div class="header-wrap">
+		<div class="main-wrapper-first"><div class="container"><div class="header-wrap">
 						<div class="header-top d-flex justify-content-between align-items-center">
 							<div class="logo">
 							</div>
 							<div class="main-menubar d-flex align-items-center">
 								<nav>
 									<a href="index.html" style="text-decoration: none;outline: 0;color: white;">Home</a>
-									<a href="#ref-demo" style="text-decoration: none;outline: 0;color: white;">Demo</a>
+									<a href="index.html#ref-demo" style="text-decoration: none;outline: 0;color: white;">Demo</a>
 									<a href="howtouse.html" style="text-decoration: none;outline: 0;color: white;">How to use Añotador</a>
 									<a href="hourglass.html" style="text-decoration: none;outline: 0;color: white;">Hourglass corpus</a>
+									<a href="results.html" style="text-decoration: none;outline: 0;color: white;">Results</a>
 								</nav>
 								<div class="menu-bar"><span class="lnr lnr-menu"></span></div>
 							</div>
 						</div>
 					</div>
+				</div>
 				
 			<div class="working-process-area">
 				<div class="container">
