--- a/annotador-web/src/main/webapp/hourglass.html
+++ b/annotador-web/src/main/webapp/hourglass.html
@@ -41,6 +41,8 @@
 									<a href="index.html#ref-demo" style="text-decoration: none;outline: 0;color: white;">Demo</a>
 									<a href="howtouse.html" style="text-decoration: none;outline: 0;color: white;">How to use Añotador</a>
 									<a href="hourglass.html" style="text-decoration: none;outline: 0;color: white;">Hourglass corpus</a>
+									<a href="results.html" style="text-decoration: none;outline: 0;color: white;">Results</a>
+
 								</nav>
 								<div class="menu-bar"><span class="lnr lnr-menu"></span></div>
 							</div>
@@ -78,7 +80,7 @@
 			</div -->
 			<!-- Start Sample Area -->
 			
-			<section class="story-area">
+			<section class="story-area" style="padding-top: 20px">
 				<div class="container">
 					<div class="row align-items-center">
 						<div class="col-lg-12">
