web updated with logos

--- a/annotador-web/src/main/webapp/howtouse.html
+++ b/annotador-web/src/main/webapp/howtouse.html
@@ -316,7 +316,9 @@ Probably the most important part for you is the field “value”, that appears 
 					<div class="container">
 						<div class="footer-content d-flex justify-content-between align-items-center flex-wrap">
 							<div class="logo">
-								<a href="index.html"><img src="img/añotador-banner-tecla-azul-noshadow.png" width="115px" height="24px" alt=""></a>
+								<a href="index.html"><img src="img/añotador-banner-tecla-azul-noshadow.png" width="160px" height="30px" alt="" hspace="10"></a>        
+								<a href="index.html"><img src="img/fi.png" height="55px" alt="" hspace="10"></a>
+								<a href="index.html"><img src="img/upm.png" height="55px" alt="" hspace="10"></a>
 							</div>
 							<div class="copy-right-text">Copyright &copy; 2019  |  <div style="font-size:8px;">All rights of the design of the web are reserved to <a href="#">Dinomuz inc.</a> Website template designed by <a href="https://colorlib.com" target="_blank">Colorlib</a></div></div>
 							<!--div class="footer-social">
