--- a/annotador-web/src/main/webapp/hourglass.html
+++ b/annotador-web/src/main/webapp/hourglass.html
@@ -153,7 +153,7 @@ In the .zip you will find tone folder for each tagger containing the annotated .
 								<h3 class="text-uppercase" style="text-align: center;">Authorship</h3><br>
 								<p>The corpus is freely downloadable under a <a href="https://www.gnu.org/licenses/gpl-3.0.en.html" rel="license">GNU General Public License v3.0</a> license.
 	
-	<br>If you plan to publish a work using this resource please refer to this webpage and use its DOI: <a href="https://zenodo.org/deposit?page=1&size=20">https://zenodo.org/deposit?page=1&size=20</a>. This work has been accepted in the LKE conference, so we will have sson a paper to cite it!
+	<br>If you plan to publish a work using this resource please refer to this webpage and use its DOI: <a href="https://doi.org/10.5281/zenodo.3415633">https://doi.org/10.5281/zenodo.3415633</a>. This work has been accepted in the LKE conference, so we will have sson a paper to cite it!
 
 	
 	<br><br>We would also want to thank the contributors of the PEOPLE part of the corpus. 
@@ -228,7 +228,7 @@ In the .zip you will find tone folder for each tagger containing the annotated .
 								<a href="index.html"><img src="img/fi.png" height="55px" alt="" hspace="10"></a>
 								<a href="index.html"><img src="img/upm.png" height="55px" alt="" hspace="10"></a>
 							</div>
-							<div class="copy-right-text">Copyright &copy; 2019  |  <div style="font-size:8px;">All rights of the design of the web are reserved to <a href="#">Dinomuz inc.</a> Website template designed by <a href="https://colorlib.com" target="_blank">Colorlib</a></div></div>
+							<div class="copy-right-text">Copyright &copy; 2020  |  <div style="font-size:8px;">All rights of the design of the web are reserved to <a href="#">Dinomuz inc.</a> Website template designed by <a href="https://colorlib.com" target="_blank">Colorlib</a></div></div>
 							<!--div class="footer-social">
 								<a href="#"><i class="fa fa-facebook"></i></a>
 								<a href="#"><i class="fa fa-twitter"></i></a>
