--- a/annotador-web/src/main/webapp/hourglass.html
+++ b/annotador-web/src/main/webapp/hourglass.html
@@ -153,7 +153,7 @@ In the .zip you will find tone folder for each tagger containing the annotated .
 								<h3 class="text-uppercase" style="text-align: center;">Authorship</h3><br>
 								<p>The corpus is freely downloadable under a <a href="https://www.gnu.org/licenses/gpl-3.0.en.html" rel="license">GNU General Public License v3.0</a> license.
 	
-	<br>If you plan to publish a work using this resource please refer to this webpage and use its DOI: <a href="https://doi.org/10.5281/zenodo.3415633">https://doi.org/10.5281/zenodo.3415633</a>. This work has been accepted in the LKE conference, so we will have sson a paper to cite it!
+	<br>This resource is also available in <a href="https://doi.org/10.5281/zenodo.3415633">Zenodo</a>. If you plan to publish a work using this resource please cite the paper <a href="https://doi.org/10.3233/JIFS-179865">Annotador: a temporal tagger for Spanish</a>.
 
 	
 	<br><br>We would also want to thank the contributors of the PEOPLE part of the corpus. 
