interval english legal

--- a/annotador-web/src/main/webapp/howtouse.html
+++ b/annotador-web/src/main/webapp/howtouse.html
@@ -182,6 +182,8 @@ Probably the most important part for you is the field “value”, that appears 
 								<br><code>mvn clean install</code><br> </p>
 								<br>
 								<a href="https://github.com/mnavasloro/Annotador" class="primary-btn d-inline-flex align-items-center" style="text-decoration: none;outline: 0;"><span class="mr-10">Go to GitHub</span><span class="lnr lnr-arrow-right"></span></a>
+								
+								<a href="https://mnavasloro.github.io/Annotador/" class="primary-btn d-inline-flex align-items-center" style="text-decoration: none;outline: 0;"><span class="mr-10">Go to Code Documentation</span><span class="lnr lnr-arrow-right"></span></a>
 								<br>
 								<br>
 							</div>
@@ -200,7 +202,7 @@ Probably the most important part for you is the field “value”, that appears 
 							<img src="img/dockerimage.png" width="30%"  align="left" style="padding:0% 5% 5% 0%;"/>
 								<h4 class="text-uppercase">Docker</h4>
 								<br>
-								<p>Añotador can be deployed as a Docker image. Please go the GitHub to further information.</p>
+								<p>Añotador can be deployed as a Docker image. Please go to the GitHub repository for further information.</p>
 								<br>
 								<a href="https://github.com/mnavasloro/Annotador" class="primary-btn d-inline-flex align-items-center" style="text-decoration: none;outline: 0;"><span class="mr-10">Go to GitHub</span><span class="lnr lnr-arrow-right"></span></a>
 								<br>
@@ -219,10 +221,10 @@ Probably the most important part for you is the field “value”, that appears 
 							<img src="img/curl.png" width="35%"  align="left" style="padding:0% 5% 5% 0%;"/>
 								<h4 class="text-uppercase">CURL/Postman</h4>
 								<br>
-								<p> There is a webapp of Añotador were you can send a request. You can also the following Postman  collection with requests in Spanish and English as a first example.
+								<p> There is a webapp of Añotador where you can send a request. You can also check the following Postman collection with requests in Spanish and English for a first example.
 </p>
 								<br>
-								<a href="https://www.getpostman.com/collections/1caba0e49d40bd38789e" class="primary-btn d-inline-flex align-items-center" style="text-decoration: none;outline: 0;"><span class="mr-10">Go to Postman collection</span><span class="lnr lnr-arrow-right"></span></a>
+								<a href="https://www.getpostman.com/collections/3a2492f833535edf39b1" class="primary-btn d-inline-flex align-items-center" style="text-decoration: none;outline: 0;"><span class="mr-10">Go to Postman collection</span><span class="lnr lnr-arrow-right"></span></a>
 								<br>
 								<br>
 							</div>
