EN rules tested

--- a/annotador-web/src/main/webapp/index.html
+++ b/annotador-web/src/main/webapp/index.html
@@ -33,6 +33,10 @@
 
     </head>
     <body>
+        <!-- PureCookie -->
+  <link rel="stylesheet" type="text/css" href="css/purecookie.css" async />
+  <script src="js/purecookie.js" async></script>
+  <!--            -->
         <div class="main-wrapper-first"><div class="container"><div class="header-wrap">
                     <div class="header-top d-flex justify-content-between align-items-center">
                         <div class="logo">
